--- a/prova.html
+++ b/prova.html
@@ -2,10 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<h1Z, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>prova</h1>
+    <header>
+        <img src="" alt="logo" />
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li> About</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+<form>
+    <label for=""> Nome: </label>
+    <input type="text" id="nome" placeholder="il tuo nome"required>
+</form>
+
+    </main>
 </body>
 </html>
